@@ -5,7 +5,7 @@ indexOf: anObject
     | h2 pos size |
     size := self basicSize.
     pos := anObject hash \\ (size - 1).
-    h2 := pos / 4.
+    h2 := pos quo: 4.
 
     h2 := h2 max: 1.
     (h2 ~= 1 & ((h2 \\ 2) isZero))
